Bug 1944586 - Reset JOG in tests as well r=TravisLong

The added test covers 2 parts:
It triggers the former broken behavior: `setEnabled` after `testResetFog`.
It also showcases the current behavior of collection-disabled pings &
server-knobs: server-knobs doesn't work for these pings.

This test passes in a full build on this commit.
It also passes in a hacky local "artifact" build (forcing creation and
loading of the jogfile). Once landed this should pass artifact builds in
general (to be tested on try afterwards).

Differential Revision: https://phabricator.services.mozilla.com/D235986